crates/structurizr-analysis/tests/snapshots/document_snapshots__document_snapshot@includes__workspace_fragments_ok.snap
---
source: crates/structurizr-analysis/tests/document_snapshots.rs
expression: "SnapshotView::from(&snapshot)"
---
SnapshotView {
    has_syntax_errors: false,
    diagnostics: [],
    include_directives: [
        IncludeDirective {
            raw_value: "\"model-fragment-ok.dsl\"",
            value_kind: String,
            span: TextSpan {
                start_byte: 16,
                end_byte: 48,
                start_point: TextPoint {
                    row: 1,
                    column: 4,
                },
                end_point: TextPoint {
                    row: 1,
                    column: 36,
                },
            },
            value_span: TextSpan {
                start_byte: 25,
                end_byte: 48,
                start_point: TextPoint {
                    row: 1,
                    column: 13,
                },
                end_point: TextPoint {
                    row: 1,
                    column: 36,
                },
            },
            container: Workspace,
        },
        IncludeDirective {
            raw_value: "\"views-fragment-ok.dsl\"",
            value_kind: String,
            span: TextSpan {
                start_byte: 53,
                end_byte: 85,
                start_point: TextPoint {
                    row: 2,
                    column: 4,
                },
                end_point: TextPoint {
                    row: 2,
                    column: 36,
                },
            },
            value_span: TextSpan {
                start_byte: 62,
                end_byte: 85,
                start_point: TextPoint {
                    row: 2,
                    column: 13,
                },
                end_point: TextPoint {
                    row: 2,
                    column: 36,
                },
            },
            container: Workspace,
        },
    ],
    identifier_modes: [],
    symbols: [],
    references: [],
}
